--- a/project/templates/signup.html
+++ b/project/templates/signup.html
@@ -11,7 +11,7 @@
     <style>
         .error {
             color: red;
-            font-size: 0.9em;
+            font-size: small;
         }
         .otp-section {
             display: none;
