--- a/project/templates/home.html
+++ b/project/templates/home.html
@@ -240,9 +240,12 @@
       <div class="product_container">
         <div class="box">
           <div class="box-content">
-            <a href="{% url 'products_details' %}">
-              <img src="{% static 'images/w1.png' %}" alt="">
-            </a>
+            <div class="img-box">
+                <a href="{% url 'products_details' %}">
+                    <img src="{% static 'images/w1.png' %}" alt="">
+
+                </a>
+            </div>
             <div class="detail-box">
               <div class="text">
                 <h6>
@@ -274,9 +277,11 @@
         </div>
         <div class="box">
           <div class="box-content">
-            <a href="{% url 'products_details' %}">
-              <img src="{% static 'images/w2.png' %}" alt="">
-            </a>
+            <div class="img-box">
+                <a href="{% url 'products_details' %}">
+                    <img src="{% static 'images/w2.png' %}" alt="">
+                </a>
+            </div>
             <div class="detail-box">
               <div class="text">
                 <h6>
@@ -308,9 +313,11 @@
         </div>
         <div class="box">
           <div class="box-content">
-            <a href="{% url 'products_details' %}">
-              <img src="{% static 'images/w3.png' %}" alt="">
-            </a>
+            <div class="img-box">
+                <a href="{% url 'products_details' %}">
+                    <img src="{% static 'images/w3.png' %}" alt="">
+                </a>
+            </div>
             <div class="detail-box">
               <div class="text">
                 <h6>
@@ -343,11 +350,6 @@
       </div>
     </div>
   </section>
-
-  <!-- end product section -->
-
-
-  <!-- product section -->
 
   <section class="product_section ">
     <div class="container">
@@ -359,9 +361,11 @@
       <div class="product_container">
         <div class="box">
           <div class="box-content">
-            <a href="{% url 'products_details' %}">
-              <img src="{% static 'images/w4.png' %}" alt="">
-            </a>
+            <div class="img-box">
+                <a href="{% url 'products_details' %}">
+                    <img src="{% static 'images/w4.png' %}" alt="">
+                </a>
+            </div>
             <div class="detail-box">
               <div class="text">
                 <h6>
@@ -393,9 +397,11 @@
         </div>
         <div class="box">
           <div class="box-content">
-            <a href="{% url 'products_details' %}">
-              <img src="{% static 'images/w5.png' %}" alt="">
-            </a>
+            <div class="img-box">
+                <a href="{% url 'products_details' %}">
+                    <img src="{% static 'images/w5.png' %}" alt="">
+                </a>
+            </div>
             <div class="detail-box">
               <div class="text">
                 <h6>
@@ -427,9 +433,11 @@
         </div>
         <div class="box">
           <div class="box-content">
-            <a href="{% url 'products_details' %}">
-              <img src="{% static 'images/w6.png' %}" alt="">
-            </a>
+            <div class="img-box">
+                <a href="{% url 'products_details' %}">
+                    <img src="{% static 'images/w6.png' %}" alt="">
+                </a>
+            </div>
             <div class="detail-box">
               <div class="text">
                 <h6>
@@ -462,12 +470,6 @@
       </div>
     </div>
   </section>
-
-
-  <!-- end product section -->
-
-
-  <!-- product section -->
 
   <section class="product_section ">
     <div class="container">
@@ -479,9 +481,11 @@
       <div class="product_container">
         <div class="box">
           <div class="box-content">
-            <a href="{% url 'products_details' %}">
-              <img src="{% static 'images/w7.png' %}" alt="">
-            </a>
+            <div class="img-box">
+                <a href="{% url 'products_details' %}">
+                    <img src="{% static 'images/w7.png' %}" alt="">
+                </a>
+            </div>
             <div class="detail-box">
               <div class="text">
                 <h6>
@@ -513,9 +517,11 @@
         </div>
         <div class="box">
           <div class="box-content">
-            <a href="{% url 'products_details' %}">
-              <img src="{% static 'images/w8.png' %}" alt="">
-            </a>
+            <div class="img-box">
+                <a href="{% url 'products_details' %}">
+                    <img src="{% static 'images/w8.png' %}" alt="">
+                </a>
+            </div>
             <div class="detail-box">
               <div class="text">
                 <h6>
@@ -547,9 +553,11 @@
         </div>
         <div class="box">
           <div class="box-content">
-            <a href="{% url 'products_details' %}">
-              <img src="{% static 'images/w9.png' %}" alt="">
-            </a>
+            <div class="img-box">
+                <a href="{% url 'products_details' %}">
+                    <img src="{% static 'images/w9.png' %}" alt="">
+                </a>
+            </div>
             <div class="detail-box">
               <div class="text">
                 <h6>
@@ -582,7 +590,7 @@
       </div>
     </div>
   </section>
-
+</div>
 
   <!-- end product section -->
 
