--- a/project/templates/signin.html
+++ b/project/templates/signin.html
@@ -22,6 +22,7 @@
             border: 1px solid transparent;
             border-radius: 5px;
             margin-bottom: 5px;
+            font-size: small;
         }
     </style>
 </head>
